improved movie endpoints