@@ -1,9 +1,7 @@
 package com.joaocuculo.favoritemovies.services;
 
 import com.joaocuculo.favoritemovies.client.OmdbClient;
-import com.joaocuculo.favoritemovies.dto.MovieResponseDTO;
-import com.joaocuculo.favoritemovies.dto.OmdbMovieResponseDTO;
-import com.joaocuculo.favoritemovies.dto.OmdbSearchResponseDTO;
+import com.joaocuculo.favoritemovies.dto.*;
 import com.joaocuculo.favoritemovies.entities.Movie;
 import com.joaocuculo.favoritemovies.repositories.MovieRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,17 +19,23 @@ public class MovieService {
     @Autowired
     private OmdbClient omdbClient;
 
-    public List<MovieResponseDTO> search(String search) {
-        OmdbSearchResponseDTO omdbDto = omdbClient.search(search);
-        return omdbDto.getSearch()
+    public MovieSearchResponseDTO search(String search, Integer page) {
+        OmdbSearchResponseDTO omdbDto = omdbClient.search(search, page);
+
+        List<MovieSearchDTO> movieList = omdbDto.getSearch()
                 .stream()
-                .map(movie -> new MovieResponseDTO(
-                        movie.getImdbID(),
+                .map(movie -> new MovieSearchDTO(
                         movie.getTitle(),
                         movie.getYear(),
+                        movie.getImdbID(),
                         movie.getType(),
-                        movie.getPoster()))
-                .collect(Collectors.toList());
+                        movie.getPoster()
+                )).toList();
+
+        int totalResults = Integer.parseInt(omdbDto.getTotalResults());
+        int totalPages = (int) Math.ceil(totalResults / 10.0);
+
+        return new MovieSearchResponseDTO(movieList, page, totalResults, totalPages);
     }
 
     public MovieResponseDTO findByImdbId(String imdbId) {
@@ -40,6 +44,21 @@ public class MovieService {
                 omdbDto.getImdbID(),
                 omdbDto.getTitle(),
                 omdbDto.getYear(),
+                omdbDto.getRated(),
+                omdbDto.getReleased(),
+                omdbDto.getRuntime(),
+                omdbDto.getGenre(),
+                omdbDto.getDirector(),
+                omdbDto.getWriter(),
+                omdbDto.getActors(),
+                omdbDto.getLanguage(),
+                omdbDto.getCountry(),
+                omdbDto.getAwards(),
+                omdbDto.getRatings(),
+                omdbDto.getMetascore(),
+                omdbDto.getImdbRating(),
+                omdbDto.getImdbVotes(),
+                omdbDto.getBoxOffice(),
                 omdbDto.getType(),
                 omdbDto.getPoster(),
                 omdbDto.getPlot());
